<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".thegallery.choosing.ChooseActivity"
    android:background="@color/background_color">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/activity_choose_guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.1" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/activity_choose_guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.9" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/activity_choose_guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.1" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/activity_choose_guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/choose_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:listitem="@layout/item_to_choose"
        app:layout_constraintTop_toBottomOf="@+id/activity_choose_guidelineTop"
        app:layout_constraintBottom_toTopOf="@id/activity_choose_guidelineBottom"
        app:layout_constraintStart_toEndOf="@+id/activity_choose_guidelineStart"
        app:layout_constraintEnd_toStartOf="@+id/activity_choose_guidelineEnd"/>


    <TextView
        android:id="@+id/textview_text_for_empty_choose_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/edition_background_color"
        android:gravity="center"
        android:text="@string/looks_like_you_have_no_art_periods"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/background_color"
        app:layout_constraintTop_toBottomOf="@+id/activity_choose_guidelineTop"
        app:layout_constraintBottom_toTopOf="@+id/choose_button_relative_layout"
        app:layout_constraintStart_toEndOf="@+id/activity_choose_guidelineStart"
        app:layout_constraintEnd_toStartOf="@+id/activity_choose_guidelineEnd"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/choose_button_relative_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/activity_choose_guidelineTop"
        app:layout_constraintBottom_toTopOf="@+id/activity_choose_guidelineBottom"
        app:layout_constraintStart_toEndOf="@+id/activity_choose_guidelineStart"
        app:layout_constraintEnd_toStartOf="@+id/activity_choose_guidelineEnd"
        >
        <Button
            android:id="@+id/button_no_art_periods_add_something"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_art_period"
            android:onClick="addNewArtPeriod"
            android:visibility="gone"
            />
        <Button
            android:id="@+id/button_no_pictures_add_something"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_no_art_periods_add_something"
            android:text="@string/download_ready_made_package"
            android:onClick="downloadSomeStuff"
            android:visibility="gone"
            />
    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>