<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".module_learn.gallery.PictureGalleryActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/activity_gallery_guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/activity_gallery_guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/activity_gallery_guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/activity_gallery_guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/gallery_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/background_color"
        app:layout_constraintBottom_toTopOf="@id/activity_gallery_guidelineBottom"
        app:layout_constraintEnd_toStartOf="@+id/activity_gallery_guidelineEnd"
        app:layout_constraintStart_toEndOf="@+id/activity_gallery_guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/activity_gallery_guidelineTop"
        tools:listitem="@layout/item_picture_to_load" />

    <TextView
        android:id="@+id/textview_text_for_empty_picture_gallery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:background="@drawable/text_view_background"
        android:gravity="center"
        android:text="@string/no_picture_movement_in_this_art_period"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/background_color"
        app:layout_constraintBottom_toTopOf="@+id/gallery_button_relative_layout"
        app:layout_constraintEnd_toStartOf="@+id/activity_gallery_guidelineEnd"
        app:layout_constraintStart_toEndOf="@+id/activity_gallery_guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/activity_gallery_guidelineTop"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/gallery_button_relative_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/activity_gallery_guidelineBottom"
        app:layout_constraintEnd_toStartOf="@+id/activity_gallery_guidelineEnd"
        app:layout_constraintStart_toEndOf="@+id/activity_gallery_guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/activity_gallery_guidelineTop">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_no_movements_add_something"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_movement"
            android:onClick="addNewMovement"
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:layout_margin="5dp"
            android:background="@drawable/button_background"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_no_pictures_add_something"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_no_movements_add_something"
            android:text="@string/add_new_picture"
            android:onClick="addNewPicture"
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:layout_margin="5dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="@drawable/button_background"
            />

    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_new_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="Add New Note"
        android:padding="0dp"
        android:src="@drawable/ic_add_button"
        android:onClick="addNewPicture"
        app:backgroundTint="@color/secondary"
        app:maxImageSize="65dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintEnd_toStartOf="@+id/activity_gallery_guidelineEnd"
        app:layout_constraintBottom_toTopOf="@+id/activity_gallery_guidelineBottom"/>


</androidx.constraintlayout.widget.ConstraintLayout>